// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: practice > spec 钉住 > description 1`] = `
"Log and review the user's practice: kegel sessions, pomodoro focus rounds, and physical exercise.

- log: when the user reports exercise done outside the app's timers ("刚做了 3 组俯卧撑,每组 20 个", "跑了半小时"), record it — name plus sets×repsPerSet or durationMin. Do not log kegel or pomodoro sessions yourself; the timer records those.
- query: when the user asks about their practice, or you want grounding for a summary or a progression suggestion, read the aggregates first and base every number on them. Suggestions (e.g. longer holds) are conversation only — never present them as applied changes."
`;

exports[`golden: practice > 模型文本与渲染信息钉住:正常:log 一条 3×20 > metadata 1`] = `
{
  "action": "log",
}
`;

exports[`golden: practice > 模型文本与渲染信息钉住:正常:log 一条 3×20 > model text 1`] = `"俯卧撑 3×20 已入账(8/18/2026, 11:04:00 AM)。"`;

exports[`golden: practice > 模型文本与渲染信息钉住:正常:log 一条 3×20 > title 1`] = `"已记上"`;

exports[`golden: practice > 模型文本与渲染信息钉住:正常:query 默认粒度 > metadata 1`] = `
{
  "action": "query",
}
`;

exports[`golden: practice > 模型文本与渲染信息钉住:正常:query 默认粒度 > model text 1`] = `
"2026-08-18 · 凯格尔 1 次(完成 1)· 30 rep · 番茄 1 轮 25′(写作 1/25′) · 俯卧撑 3 组 60 个
最近条目:
08-18 11:04 俯卧撑 3×20"
`;

exports[`golden: practice > 模型文本与渲染信息钉住:正常:query 默认粒度 > title 1`] = `"练习账本"`;

exports[`golden: practice > 模型文本与渲染信息钉住:边界:log 缺 name > metadata 1`] = `
{
  "action": "log",
}
`;

exports[`golden: practice > 模型文本与渲染信息钉住:边界:log 缺 name > model text 1`] = `"log 需要 name:用户报的项目名(如「俯卧撑」),配 sets×repsPerSet 或 durationMin。"`;

exports[`golden: practice > 模型文本与渲染信息钉住:边界:log 缺 name > title 1`] = `"缺少名称"`;

exports[`golden: practice > 模型文本与渲染信息钉住:边界:query 区间内没有记录 > metadata 1`] = `
{
  "action": "query",
}
`;

exports[`golden: practice > 模型文本与渲染信息钉住:边界:query 区间内没有记录 > model text 1`] = `"所选区间内没有练习记录。"`;

exports[`golden: practice > 模型文本与渲染信息钉住:边界:query 区间内没有记录 > title 1`] = `"练习账本"`;

exports[`golden: radio > spec 钉住 > description 1`] = `
"Run the personal radio station — the default way to play music that keeps going ("放点歌", "来点轻音乐,一直放着"). Call open with a one-sentence intent; the DJ agent curates the programme and playback starts on its own (first song within ~a minute). You never pick songs yourself.

- open: start (or restart) with an intent. retune: new direction, pass the new intent. close: the user is done ("别放了"). status: what is playing, songs left, problems. request: the user names a song while the station is on — it cuts in as the next track; NEVER play manually while the radio is on.
- Only play manually (ncm-cli via bash, see the netease-music-cli skill) when the user names ONE song AND the radio is off."
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:close > metadata 1`] = `
{
  "action": "close",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:close > model text 1`] = `
"active: false
intent: 安静的中文民谣
programme_left: 0
now_playing: 晴天"
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:close > title 1`] = `"电台已关"`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:open > metadata 1`] = `
{
  "action": "open",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:open > model text 1`] = `
"active: true
intent: 安静的中文民谣
programme_left: 5
now_playing: 晴天

DJ 正在编排:先凑一小批让音乐尽快响(通常两三分钟内第一首开播),然后边播边补全节目单、准备串词。可随时用 radio(action: "status") 查看进度;向用户转述时请如实说明这个节奏,不要承诺"马上"。"
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:open > title 1`] = `"电台已开"`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:request > metadata 1`] = `
{
  "action": "request",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:request > model text 1`] = `"「晴天 周杰伦」将在下一首播出。向用户确认时报这个完整歌名。"`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:request > title 1`] = `"已插队"`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:retune > metadata 1`] = `
{
  "action": "retune",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:retune > model text 1`] = `
"active: true
intent: 安静的中文民谣
programme_left: 5
now_playing: 晴天

DJ 正在编排:先凑一小批让音乐尽快响(通常两三分钟内第一首开播),然后边播边补全节目单、准备串词。可随时用 radio(action: "status") 查看进度;向用户转述时请如实说明这个节奏,不要承诺"马上"。"
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:retune > title 1`] = `"已换台"`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:status > metadata 1`] = `
{
  "action": "status",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:status > model text 1`] = `
"active: true
intent: 安静的中文民谣
programme_left: 5
now_playing: 晴天"
`;

exports[`golden: radio > 模型文本与渲染信息钉住:正常:status > title 1`] = `"电台状态"`;

exports[`golden: radio > 模型文本与渲染信息钉住:边界:intent 只有一个字 > metadata 1`] = `
{
  "action": "open",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:边界:intent 只有一个字 > model text 1`] = `"open/retune 需要 intent:用一句话概括听众想要的氛围(时间、心情、风格),不要用占位符或单个字符。"`;

exports[`golden: radio > 模型文本与渲染信息钉住:边界:intent 只有一个字 > title 1`] = `"缺少意图"`;

exports[`golden: radio > 模型文本与渲染信息钉住:边界:request 缺 song > metadata 1`] = `
{
  "action": "request",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:边界:request 缺 song > model text 1`] = `"request 需要 song:用户点名想听的歌,尽量带歌手,如「晴天 周杰伦」。"`;

exports[`golden: radio > 模型文本与渲染信息钉住:边界:request 缺 song > title 1`] = `"缺少歌名"`;

exports[`golden: radio > 模型文本与渲染信息钉住:错误:点歌失败 > metadata 1`] = `
{
  "action": "request",
}
`;

exports[`golden: radio > 模型文本与渲染信息钉住:错误:点歌失败 > model text 1`] = `"找不到这首歌"`;

exports[`golden: radio > 模型文本与渲染信息钉住:错误:点歌失败 > title 1`] = `"点歌失败"`;
